# Software-Modelling

./: .gitignore  README.md
Assignments/A1/: CMakeLists.txt  Cheetah.cpp  CheetahFactory.cpp  CheetahFactory.h  Lion.cpp  Lion.h  LionFactory.cpp  LionFactory.h  Predator.cpp  Predator.h  PredatorFactory.h  Prey.cpp  Prey.h  WildDog.cpp  WildDogFactory.cpp  WildDogFactory.h  Wolf.cpp  Wolf.h  WolfFactory.cpp  WolfFactory.h  main.cpp
Assignments/A1_trytwo/: HopefulFinal.vpp  HopefulFinal.vpp.bak_000f  main.cpp
Assignments/A2/: BaseImage.cpp  BaseImage.h  CMakeLists.txt  ImageAddOns.cpp  ImageAddOns.h  ImageElement.cpp  ImageElement.h  LevelFourState.h  LevelState.cpp  Mask.cpp  Mask.h  Pandemic.cpp  Pandemic.h  Poster.cpp  Poster.h  PosterPrototype.h  TemperatureCheck.cpp  TemperatureCheck.h  UseHandSanitiser.cpp  UseHandSanitiser.h  WashHands.cpp  WashHands.h  main.cpp  maskAlert.txt  mask_pic.txt  sanitiser.txt  sanitiser_pic.txt  tempCheck.txt  temp_gun_pic.txt  temp_pic.txt  washHands_pic.txt  washhands.txt
Assignments/A3/: CMakeLists.txt
Assignments/A3/Task1/: capture.cpp  marks.cpp
Assignments/A3/Task2/: BorderGuard.cpp  Human.cpp  PrisonArea.cpp  main.cpp  readme.txt
Assignments/A3/Task3/: ConcreteIterator.cpp  ConcreteIterator.h  DynamicArray.cpp  DynamicArray.h  Iterator.cpp  Iterator.h  LinearStructure.h  Node.h  main.cpp
Assignments/A3/Task4/: ConcreteSocialSiteMediator.cpp  ConcreteSocialSiteMediator.h  Inbox.cpp  Inbox.h  OldStatus.cpp  OldStatus.h  SocialSiteMediator.h  SocialSiteUser.cpp  SocialSiteUser.h  User.h  test.cpp
Assignments/A3/Task4_IncorrectOne/: ConcreteSocialSiteMediator.h  Inbox.cpp  Inbox.h  OldStatus.cpp  OldStatus.h  SocialSiteMediator.cpp  SocialSiteMediator.h  SocialSiteUser.h  User.cpp  User.h  test.cpp
Assignments/A3_T3/: CMakeLists.txt  ConcreteIterator.cpp  ConcreteIterator.h  DynamicArray.cpp  DynamicArray.h  Iterator.cpp  Iterator.h  LinearStructure.cpp  LinearStructure.h  Node.h  main.cpp
Assignments/A4/: .gitignore  readme.md
Assignments/A4/Code/: Button.h  Command.h  Fly.h  Makefile  RemoteControlCar.cpp  RemoteControlCar.h  RemoteControlPlane.cpp  RemoteControlPlane.h  RemoteControlVehicle.h  RocketAdapter.h  Speed.h  TurnOn.h  main.cpp
Assignments/A4/Task1/: Button.h  Command.h  Fly.h  MoveBackward.h  MoveForward.h  RemoteControlCar.cpp  RemoteControlCar.h  RemoteControlPlane.cpp  RemoteControlPlane.h  RemoteControlRocket.h  RemoteControlVehicle.h  RocketAdapter.h  TurnOff.h  TurnOn.h  inclusions.h  main.cpp
Assignments/A4/Test_Chain_of_Responsibility/: RCCar.h  RCPlane.h  RCVehicle.h  _Command.h  _Fly.h  _Speed.h  main.cpp
Assignments/Assignment 1/A1/: CMakeLists.txt  CheetahFactory.h  LionFactory.cpp  Makefile  PredatorFactory.h  WildDogFactory.cpp  WolfFactory.cpp  WolfFactory.h
Assignments/Assignment 1/A1_trytwo/: CMakeLists.txt  HopefulFinal.vpp  HopefulFinal.vpp.bak_001d  HopefulFinal.vpp.bak_002d  HopefulFinal.vpp.bak_003d  HopefulFinal.vux  main.cpp
Assignments/Assignment 1/u17091820_A1_214/: readme.md
Assignments/Assignment 2/A2/: BaseImage.cpp  BaseImage.h  ImageAddOns.cpp  LevelFiveState.h  LevelOneState.cpp  LevelState.h  LevelThreeState.h  LevelTwoState.cpp  NoLevelState.h  Pandemic.cpp  PandemicStrategy.cpp  PandemicStrategy.h  Poster.h  UseHandSanitiser.h  WashHands.h  levelFiveStrategy.cpp  levelFiveStrategy.h  levelFourStrategy.cpp  levelFourStrategy.h  levelThreeStrategy.cpp  levelTwoStrategy.cpp  levelTwoStrategy.h  mask_pic.txt  temp_gun_pic.txt  termcolor.h
Assignments/Assignment 2/DecoratorIronOut/: Decorator.h  Prototype.h  (+1 more)
Assignments/Assignment 3/A3/: CMakeLists.txt
Assignments/Assignment 3/A3/Task1/: capture.cpp  readme.md
Assignments/Assignment 3/A3/Task2/: BorderGuard.cpp  BorderGuard.h  Human.h  Makefile  Observers.cpp  PrisonArea.h  Prisoner.cpp  Prisoner.h  Subject.cpp
Assignments/Assignment 3/A3/Task3/: ConcreteIterator.h  DynamicArray.cpp  DynamicArray.h  Iterator.cpp  Iterator.h  LinearStructure.cpp  LinearStructure.h  main.cpp  readme.md
Assignments/Assignment 3/A3/Task4/: actualoutput.txt  main.cpp
Assignments/DecoratorIronOut/: CMakeLists.txt  Decorator.h  Poster.h  Prototype.h  main.cpp
Assignments/Task4_A3/: main.cpp
Assignments/u17091820_A1_214/: Cheetah.cpp  Cheetah.h  LionFactory.h  Predator.cpp  Predator.h  PredatorFactory.h  PredatorMemento.cpp  Prey.cpp  Prey.h  PreyStore.cpp  PreyStore.h  WildDogFactory.cpp  WildDogFactory.h  Wolf.h  WolfFactory.h  main  main.cpp
Examples/ClassExamples/: CMakeLists.txt  TemplateMethod.cpp  main.cpp
Examples/Command/: main.cpp
Examples/Doxygen/: doxyclass.cpp  doxyclass.h
Examples/Mediator_Chatroom/: CMakeLists.txt  Chatroom.cpp  Chatroom.h  Chatter.cpp  Chatter.h  Lecturer.h  ModuleChatroom.h  Participant.h  Student.h  main.cpp
Examples/Prototype_Oggie/: Organism.cpp
Examples/Scribbles/: CMakeLists.txt  EO2_2019.cpp  main.cpp
Examples/Test/: ClassDefinitions.cpp  ClassDefinitions.h
Logistics/: Aggregate.h  CMakeLists.txt  Car.cpp  Car.h  Colleague.cpp  Colleague.h  Container.cpp  Container.h  ContainerParts.cpp  ContainerParts.h  ContainerState.cpp  ContainerState.h  Driver.cpp  Driver.h  EngDept.cpp  EngDept.h  Iterator.cpp  Iterator.h  Logistics.cpp  Logistics.h  Mediator.cpp  Mediator.h  Race.cpp  Race.h  RaceIterator.cpp  RaceIterator.h  RacesList.cpp  RacesList.h  RacingDept.cpp  RacingDept.h  Strategy.h  SubStates.cpp  SubStates.h  TransportHandler.cpp  TransportHandler.h  TransportMethods.cpp  TransportMethods.h  enums.h  main.cpp
Project/IteratorImplement/: Aggregate.cpp  Aggregate.h  CMakeLists.txt  Iterator.h  Race.h  RaceIterator.cpp  RaceIterator.h  RacesList.cpp  RacesList.h  enums.h  main.cpp
Project/Testing/: CMakeLists.txt  Container.cpp  Container.h  ContainerState.cpp  ContainerState.h  SubStates.cpp  SubStates.h
Tutorials/Tut1/: CMakeLists.txt  README.md  main.cpp
Tutorials/Tut2/: CMakeLists.txt  MemoTypes.cpp  MemoTypes.h  Staff.h  main.cpp  memo.cpp  memo.h  memosender.cpp  memosender.h  readme.md
Tutorials/Tut3/: CMakeLists.txt  Makefile  main.cpp  readme.md
(+127 files in other folders)
