cmake_minimum_required(VERSION 3.17)
project(A3)

set(CMAKE_CXX_STANDARD 17)

add_executable(A3 Task2/main.cpp Task1/marks.cpp Task1/capture.cpp Task2/Human.cpp Task2/Human.h Task2/Subject.cpp Task2/Subject.h Task2/Observers.cpp Task2/Observers.h Task2/Prisoner.cpp Task2/Prisoner.h Task2/PrisonArea.cpp Task2/PrisonArea.h Task2/BorderGuard.cpp Task2/BorderGuard.h Task3/LinearStructure.h Task3/DynamicArray.cpp Task3/DynamicArray.h Task3/main.cpp Task4_IncorrectOne/test.cpp Task4_IncorrectOne/User.cpp Task4_IncorrectOne/User.h Task4_IncorrectOne/SocialSiteMediator.cpp Task4_IncorrectOne/SocialSiteMediator.h Task4_IncorrectOne/ConcreteSocialSiteMediator.cpp Task4_IncorrectOne/ConcreteSocialSiteMediator.h Task4_IncorrectOne/SocialSiteUser.cpp Task4_IncorrectOne/SocialSiteUser.h Task4_IncorrectOne/Inbox.cpp Task4_IncorrectOne/Inbox.h Task4_IncorrectOne/OldStatus.cpp Task4_IncorrectOne/OldStatus.h)